--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,5 +1,7 @@
+//
 {
   "compilerOptions": {
+    "jsx": "preserve",
     "target": "ES2018",
     "module": "ESNext",
     "moduleResolution": "Node",
