--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "eslint": "^8.4.1",
     "eslint-plugin-nuxt": "^3.1.0",
-    "eslint-plugin-vue": "^8.2.0"
+    "eslint-plugin-vue": "^8.2.0",
+    "vue-loader-v16": "^16.0.0-beta.5.4"
   }
 }
