--- a/server/package.json
+++ b/server/package.json
@@ -17,10 +17,12 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/cryptr": "^4.0.1",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "cryptr": "^6.0.3",
     "express": "^4.18.1",
     "json": "^11.0.0",
     "mongoose": "^6.4.5"
