--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "cryptr": "^6.0.3",
     "express": "^4.18.1",
     "json": "^11.0.0",
-    "mongoose": "^6.4.5"
+    "mongoose": "^6.4.5",
+    "nodemailer": "^6.7.7"
   }
 }
