--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vuetify": "^2.6.7",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "eslint": "^8.4.1",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
+    "nuxt-vite": "^0.3.5",
     "vue-loader-v16": "^16.0.0-beta.5.4"
   }
 }
